# substrate-stellar-xdr-generator

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
js-xdr/src/: enum.ts  index.ts  struct.ts  union.ts  writer.ts
src/: compound_types.rs  main.rs  streams.rs  xdr_codec.rs  xdr_decode.rs
static/: Cargo.toml  README.md
static/src/: compound_types.rs  lib.rs  streams.rs  xdr.rs  xdr_codec.rs
test/: Cargo.toml
test/src/: main.rs
