[package]
name = "substrate-stellar-xdr"
version = "0.2.7"
authors = ["Torsten Stüber <torsten@satoshipay.io>"]
edition = "2018"
license = "Apache-2.0"
description = "A coder/decoder of Stellar XDR types"
repository = "https://github.com/pendulum-chain/substrate-stellar-xdr-generator"
readme = "README.md"
keywords = ["substrate", "Stellar", "XDR"]

[dependencies]
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate" }
base64 = { default-features = false, version = "0.13.0" }

[features]
default = []
all-types = []
