[package]
name = "substrate-xdr-test"
version = "0.1.0"
authors = ["Torsten Stüber <torsten@satoshipay.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-stellar-xdr = {path = '../generated', version="*"}
base64 = "0.13.0"
